# resistor_optimization

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  formatters.h  genetic_resistors.nb  main.cpp  math_utils.cpp  math_utils.h  model.cpp  model.h  resistor.h  resistor_check.nb  resistor_series.cpp  resistor_series.h  resistors.cpp  resistors.py  signals.cpp  signals.h
